welcome-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: welcome-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: welcome
spec:
  hosts:
  - "*"
  gateways:
  - welcome-gateway
  http:
  - match:
    - uri:
        prefix: /welcome
    route:
    - destination:
        host: welcome
        port:
          number: 9090
